425: Fix spacing above content-list when in container with background colour.

--- a/aemedge/blocks/content-list/content-list.css
+++ b/aemedge/blocks/content-list/content-list.css
@@ -82,3 +82,10 @@ body.hub-l2 .content-list ul {
     grid-auto-rows: 115px 100px 60px;
   }
 }
+
+.section.background-light,
+.section.background-dark {
+  .content-list:first-child {
+    margin-top: var(--udexSpacer56);
+  }
+}
